Table with no border in editor now has a dashed blank border to make sure it is visible.

--- a/scripts/tiny_mce/editor_styles.css
+++ b/scripts/tiny_mce/editor_styles.css
@@ -33,7 +33,7 @@ table.no-border {
 	padding: 0px;
 }
 table.no-border td {
-	border: 0px;
+	border: 1px #666666 dashed;
 	padding: 2px;
 	vertical-align: top;
 }
